--- a/WebContent/indexContrats.html
+++ b/WebContent/indexContrats.html
@@ -11,20 +11,32 @@
 				<a href="./deconnexion" ><img src="images/menu/logout.jpg" alt="logout" /></a></div>
 		</div>
 	</div>
+
 	<div id="content">
 		<div id="bg_body_top"></div>
 		<div id="bg_body_center">
 			<div id="bg_body">
 				<div class="center"><img src="images/text/investisseur.png" alt="" /></div><br/><br/>
 				
-				<div class="center">
-				<a href="" ><img src="images/icon/liste.png" alt="societes" /></a>
-				<a href="indexContrats.html" ><img src="images/icon/contrats.png" alt="societes" /></a>
-				<a href="./ListeTransaction" ><img src="images/icon/transactions.png" alt="transaction" /></a>
-				<a href="" ><img src="images/icon/compte.png" alt="compte" /></a>
-				</div>
-				<br/><br/>
-				
+				<table width="70%" align="center" class="tx">
+					<thead class="tn">
+						<td>Action</td>
+						<td>Option Call </td>
+						<td>Option Put </td>
+					</thead>
+					<tr>
+						<td><a href="./ListeTitreImmediat" class="ct">ACHAT</a></td>
+						<td><a href="./ListeOptionImmediat?&type=0" class="ct">ACHAT</a></td>
+						<td><a href="./ListeOptionImmediat?&type=1" class="ct">ACHAT</a></td>
+					</tr>
+					<tr>
+						<td><a href="./ListeTitreEnchere" class="ct">ENCHERE</a></td>
+						<td><a href="./ListeOptionEnchere?&type=2" class="ct">ENCHERE</a></td>
+						<td><a href="./ListeOptionEnchere?&type=3" class="ct">ENCHERE</a></td>
+					</tr>
+				</table><br/><br/>
+				<a class="center" href="./logged">Retour à la page principal</a>
+		
 			</div>
 		</div>
 		<div id="bg_body_foot"></div>
