--- a/WebContent/pages/titre-immediat-ajoute.xhtml
+++ b/WebContent/pages/titre-immediat-ajoute.xhtml
@@ -6,7 +6,7 @@
       xmlns:ui="http://java.sun.com/jsf/facelets">
     <h:head>
         <meta charset="utf-8" />
-        <title>Investisseur</title>
+        <title>Titre immédiat ajouté</title>
    
         <link rel='stylesheet' media='screen' type='text/css' title='Design' href='../css/pages.css' />
     </h:head>
@@ -23,14 +23,14 @@
 			<div id="bg_body"><br/><br/>
 				<table style="width:45%; text-align:center; margin:auto;" class="tableaux3">
 				<tr><td width="10%"><img src="../images/icon/ok.png" alt="error" /></td><td align="center">
-	#{gererUtilisateurBean.inscrire()}
+					#{gererTitreBean.inscrire()}
 				</td></tr></table>
 				<br/>	<br/>
 				
 				<a class="center" href="../">Retour à la page principal</a>
 			</div>
-		</div>
-		<div id="bg_body_foot"></div>
+	
+		<div id="bg_body_foot"></div>	</div>
 	</div>
 	<div id="foot_body">
 		<div class="copyright">
