--- a/WebContent/pages/inscription.xhtml
+++ b/WebContent/pages/inscription.xhtml
@@ -15,7 +15,7 @@
 		<div id="topBody">
 			<div class="logo"><img src="../images/logo2.png" alt="privatemarket"/></div>
 			<div class="menu">
-				<a href="#"><img src="../images/menu/liste.png" alt="liste" /></a>
+				<a href="./listeEntreprises.xhtml"><img src="../images/menu/liste.png" alt="liste" /></a>
 				<a href="./deconnexion"><img src="../images/menu/logout.jpg" alt="logout" /></a>
 			</div>
 		</div>
