--- a/WebContent/pages/inscriptionSociete.xhtml
+++ b/WebContent/pages/inscriptionSociete.xhtml
@@ -14,11 +14,10 @@
 		<div id="topBody">
 			<div class="logo"><img src="../images/logo2.png" alt="privatemarket"/></div>
 			<div class="menu">
-				<a href="#"><img src="../images/menu/liste.png" alt="liste" /></a>
+				<a href="./listeEntreprises.xhtml"><img src="../images/menu/liste.png" alt="liste" /></a>
 				<a href="../deconnexion"><img src="../images/menu/logout.jpg" alt="logout" /></a>
 			</div>
-		</div>
-	</div>
+	</div></div>
 		<div id="content">
 		<div id="bg_body_top"></div>
 		<div id="bg_body_center">
