--- a/WebContent/pages/titre-ajoute.xhtml
+++ b/WebContent/pages/titre-ajoute.xhtml
@@ -23,11 +23,12 @@
 			<div id="bg_body"><br/><br/>
 				<table style="width:45%; text-align:center; margin:auto;" class="tableaux3">
 				<tr><td width="10%"><img src="../images/icon/ok.png" alt="error" /></td><td align="center">
+					#{gererTitreBean.titre.setPrixActuel(gererTitreBean.titre.prixInitial)}
 					#{gererTitreBean.inscrire()}
 				</td></tr></table>
 				<br/>	<br/>
 				
-				<a class="center" href="../">Retour à la page principal</a>
+				<a class="center" href="indexContrats.xhtml">Retour à la page principal</a>
 			</div>
 	
 		<div id="bg_body_foot"></div>	</div>
